fixed text overflow

--- a/reqs/globalStyle.css
+++ b/reqs/globalStyle.css
@@ -131,7 +131,6 @@
     margin-top:4px;
     margin-left:8px;
     position:absolute;
-    vertical-align:middle;
 }
 
 .thumbnailcreator
